# adell-mri

./: .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  ahnet-train-prostate-x.py  classification-train.py  classifier-from-u-net-train.py  classifier-from-u-net-train.smk  cross-validate-all.sh  data-loading-pi-cai.ipynb  data-loading-prostate-x.ipynb  data-processing-anchors.ipynb  get-folds.py  make-spacing-size-uniform.py  object-detector-3d-train.py  od-masks-to-bounding-boxes.py  predict-all-decathlon.sh  predict-u-net.py  pyproject.toml  pytest.ini  requirements.txt  self-supervised-train.py  ssl-pi-cai.smk  test-all.sh  test-u-net-gland-decathlon.py  train-u-net-3d-prostate-x.py  train-u-net-prostate-x.py  u-net-cross-validate-pi-cai.smk  u-net-cross-validate-prostate-x.smk  u-net-cross-validate.sh  u-net-predict-all-decathlon.sh  u-net-predict-all-prostatex.sh  u-net-predict.py  u-net-ssl-cross-validate-pi-cai.smk  u-net-test-all.sh  u-net-test-gland-decathlon.py  u-net-test-picai.py  u-net-test.py  u-net-train-pi-cai.sh  u-net-train-prostate-x.py  (+2 more)
adell_mri/: __init__.py  __main__.py  custom_types.py  monai_transforms.py
analyses/: analysis-unet-metrics.html  analysis-unet-metrics.qmd  references.bib
benchmarks/: benchmark-dataloaders.py  benchmark-random-affine.py  benchmark-vicreg-losses.py  benchmark_augmentations.py  benchmark_augmentations_2d.py  benchmark_dicom_dataloader_with_sampler.py  benchmark_dicom_dataset.py
classification/: classification-ensemble-test.py  classification-ensemble-train.py  classification-mil-predict.py  classification-mil-test.py  classification-mil-train.py  classification-predict.py  classification-test.py  classification-train.py  classification-transformable-transformer-test.py  classification-transformable-transformer-train.py  classifier-from-u-net-train.py  entrypoint.py
config/: cat-net.yaml  cat-next.yaml  cat-vit-big.yaml  cat-vit.yaml  resnet-classification.yaml  resnet-transfer-smaller.yaml  resnet-transfer-tiny.yaml  resnet-transfer.yaml  swin-unet.yaml  transformable-transformer.yaml  u-net-2d.yaml  u-net-3d-resnet.yaml  u-net-3d-simple.yaml  u-net-3d-ssl.yaml  u-net-3d.yaml  u-net.yaml  unetr.yaml  yolo-3d.yaml
detection/: detection-predict.py  detection-train.py
generative/: entrypoint.py  train.py
lib/: __init__.py  __main__.py  batch_preprocessing.py  custom_types.py  monai_transforms.py  optim.py  pl_utils.py  types.py  utils.py
progan_testing/: progan_testing.ipynb  progan_testing.py
sample_configs/: classification-cat-convnext.yaml  classification-cat-resnet.yaml  classification-vit.yaml  ssl-2d-convnext.yaml  ssl-resnet.yaml  transformable-transformer.yaml  u-net-3d-resnet.yaml  unet-swin.yaml  unetr.yaml  vggnet-net.yaml
segmentation/: u-net-predict-all-decathlon.sh  u-net-predict-all-prostatex.sh  u-net-predict.py  u-net-test-all.sh  u-net-test-gland-decathlon.py  u-net-test-picai.py  u-net-test.py  u-net-train.py
ssl/: entrypoint.py  self-supervised-train-2d.py  self-supervised-train.py  selfsl-2d-classifier-3d.py  selfsl-2d-model-to-torchscript.py  selfsl-3d-train.py
testing/: requirements.txt  (+60 more)
(+409 files in other folders)
