[project]
name = "adell-mri"
version = "0.1.0"
description = "A deep-learning library built with torch, lightning and MONAI for medical imaging."
authors = [
  {name = "Jose Guilherme de Almeida", email = "jose.almeida@research.fchampalimaud.org"},
  {name = "Nuno M. Rodrigues"}
]
license = {text = "LICENSE"}
dependencies = [
    "scikit-build==0.17.6",
    "dvc==2.45.1",
    "einops==0.7.0",
    "hydra-core==1.3.2",
    "itk>=5",
    "lightning>=2.1.2",
    "monai>=1.3.0",
    "multiprocess==0.70.13",
    "nibabel==5.1.0",
    "numpy==1.26",
    "omegaconf==2.3.0",
    "pandas==1.4.2",
    "panel==1.2.3",
    "Pillow>=10.2.0",
    "pydicom==2.4.3",
    "pytest==7.2.0",
    "PyYAML==6.0.1",
    "scikit-image==0.20",
    "scikit-learn==1.3.0",
    "scipy==1.11.4",
    "SimpleITK==2.3.1",
    "torchmetrics==1.2.0",
    "tqdm==4.64.1",
    "generative @ git+https://github.com/Project-MONAI/GenerativeModels.git@0.2.2",
    "matplotlib>=3.8.2",
    "wandb>=0.16.2",
]
requires-python = ">=3.11,<3.13"

[project.scripts]
adell = "adell_mri.__main__:main"

[tool.pdm.scripts]
adell = {call = "adell_mri.__main__:main"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
