[project]
name = "adell-mri"
version = "0.1.0"
description = "A deep-learning library built with torch, lightning and MONAI for medical imaging."
authors = [
  {name = "Jose Guilherme de Almeida", email = "jose.almeida@research.fchampalimaud.org"},
  {name = "Nuno M. Rodrigues"}
]
license = {text = "LICENSE"}
dependencies = {file = ["requirements.txt"]}
requires-python = ">=3.11,<3.13"

[project.scripts]
adell = "adell_mri.__main__:main"

[tool.pdm.scripts]
adell = {call = "adell_mri.__main__:main"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
