[project]
name = "adell-mri"
version = "0.1.0"
description = "A deep-learning library built with torch, lightning and MONAI for medical imaging."
authors = [
  {name = "Jose Guilherme de Almeida", email = "jose.almeida@research.fchampalimaud.org"},
  {name = "Nuno M. Rodrigues"}
]
license = {text = "LICENSE"}
dependencies = [
    "dvc>=2.45.1",
    "einops>=0.7.0",
    "hydra-core>=1.3.2",
    "itk>=5.3.0",
    "lightning>=2.1",
    "monai>=1.5.1",
    "multiprocess>=0.70.13",
    "nibabel>=5.1.0",
    "numpy>=1.26",
    "omegaconf>=2.3.0",
    "Pillow>=10.3.0",
    "pydicom>=2.4.3",
    "PyYAML>=6.0",
    "scikit-image>=0.20",
    "scikit-learn>=1.5.0",
    "scipy>=1.11.4",
    "SimpleITK>=2.3.1",
    "torchmetrics==1.6",
    "torch>=2.3",
    "tqdm>=4.66.3",
    "generative @ git+https://github.com/Project-MONAI/GenerativeModels.git@0.2.2",
    "cycler>=0.12.1",
    "kiwisolver>=1.4.7",
    "pre-commit>=4.3.0",
]
requires-python = ">=3.11,<3.13"

[project.scripts]
adell = "adell_mri.__main__:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "black>=24.12b0",
    "pytest>=8.3.4",
]
